@@ -1,3 +1,9 @@
+2010-05-13 00:41-EDT Gregory John Casamento <greg.casamento@gmail.com>
+
+	* WinNSMenu.m: Use popup menus when generating the context
+	menus.  Altered r_build_menu(..) function to accept an additional
+	parameter to make this possible.
+
 2010-05-12 18:44-EDT Gregory John Casamento <greg.casamento@gmail.com>
 
 	* WinNSMenu.m: Initial changes for theming context menus.
